@@ -23,6 +23,7 @@ package org.xhtmlrenderer.pdf;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 
 import org.xhtmlrenderer.extend.FSImage;
@@ -34,6 +35,7 @@ import org.xhtmlrenderer.util.XRLog;
 import com.itextpdf.text.Image;
 import com.itextpdf.text.Rectangle;
 import com.itextpdf.text.pdf.PdfReader;
+
 import org.xhtmlrenderer.util.ImageUtil;
 
 public class ITextUserAgent extends NaiveUserAgent {
@@ -59,33 +61,33 @@ public class ITextUserAgent extends NaiveUserAgent {
         return out.toByteArray();
     }
 
-    public ImageResource getImageResource(String uri) {
+    public ImageResource getImageResource(String uriStr) {
         ImageResource resource = null;
-        if (ImageUtil.isEmbeddedBase64Image(uri)) {
-            resource = loadEmbeddedBase64ImageResource(uri);
+        if (ImageUtil.isEmbeddedBase64Image(uriStr)) {
+            resource = loadEmbeddedBase64ImageResource(uriStr);
         } else {
-            uri = resolveURI(uri);
-            resource = (ImageResource) _imageCache.get(uri);
+            uriStr = resolveURI(uriStr);
+            resource = (ImageResource) _imageCache.get(uriStr);
             if (resource == null) {
-                InputStream is = resolveAndOpenStream(uri);
+                InputStream is = resolveAndOpenStream(uriStr);
                 if (is != null) {
                     try {
-                        URL url = new URL(uri);
-                        if (url.getPath() != null && url.getPath().toLowerCase().endsWith(".pdf")) {
-                            PdfReader reader = _outputDevice.getReader(url);
-                            PDFAsImage image = new PDFAsImage(url);
+                        URI uri = new URI(uriStr);
+                        if (uri.getPath() != null && uri.getPath().toLowerCase().endsWith(".pdf")) {
+                            PdfReader reader = _outputDevice.getReader(uri);
+                            PDFAsImage image = new PDFAsImage(uri);
                             Rectangle rect = reader.getPageSizeWithRotation(1);
                             image.setInitialWidth(rect.getWidth() * _outputDevice.getDotsPerPoint());
                             image.setInitialHeight(rect.getHeight() * _outputDevice.getDotsPerPoint());
-                            resource = new ImageResource(uri, image);
+                            resource = new ImageResource(uriStr, image);
                         } else {
                             Image image = Image.getInstance(readStream(is));
                             scaleToOutputResolution(image);
-                            resource = new ImageResource(uri, new ITextFSImage(image));
+                            resource = new ImageResource(uriStr, new ITextFSImage(image));
                         }
-                        _imageCache.put(uri, resource);
+                        _imageCache.put(uriStr, resource);
                     } catch (Exception e) {
-                        XRLog.exception("Can't read image file; unexpected problem for URI '" + uri + "'", e);
+                        XRLog.exception("Can't read image file; unexpected problem for URI '" + uriStr + "'", e);
                     } finally {
                         try {
                             is.close();
@@ -97,9 +99,13 @@ public class ITextUserAgent extends NaiveUserAgent {
             }
 
             if (resource != null) {
-                resource = new ImageResource(resource.getImageUri(), (FSImage) ((ITextFSImage) resource.getImage()).clone());
+                FSImage image=resource.getImage();
+                if (image instanceof ITextFSImage) {
+                    image=(FSImage) ((ITextFSImage) resource.getImage()).clone();
+                }
+                resource = new ImageResource(resource.getImageUri(), image);
             } else {
-                resource = new ImageResource(uri, null);
+                resource = new ImageResource(uriStr, null);
             }
         }
         return resource;
